# Particle_Accelerator

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: comprehensive_bench.rs  physics_bench.rs
docs/: ARCHITECTURE.md
examples/: basic_simulation.rs  ray_casting.rs  stacking.rs
renderer/: README.md
renderer/src/: error.rs  lib.rs
renderer/src/renderer/: cleanup_traits.rs  frame_graph.rs  fullscreen_pass.rs  hdr_framebuffer.rs  instancing.rs  light_culling_integration.rs  lod_system.rs  mod.rs  model_renderer.rs  msaa_targets.rs  occlusion_culling.rs  pipeline_cache.rs  render_stats.rs  renderer.rs  resource_registry.rs  shadow_map.rs  temporal_aa.rs
renderer/src/shaders/: bloom_downsample.frag  frag.glsl  light_culling.comp  taa_resolve.comp
renderer/src/vulkan/: allocator.rs  command.rs  command_manager.rs  compute_pipeline.rs  deletion_queue.rs  descriptor.rs  descriptor_allocator.rs  descriptor_bindless.rs  descriptor_layout.rs  (+17 more)
src/: config.rs  lib.rs  world.rs
src/collision/: broadphase.rs  ccd.rs  clipping.rs  contact.rs  mod.rs  narrowphase.rs  queries.rs  shapes.rs
src/core/: articulations.rs  collider.rs  constraints.rs  mesh.rs  mod.rs  rigidbody.rs  soa.rs  types.rs
src/dynamics/: aba.rs  forces.rs  friction.rs  integrator.rs  island.rs  mod.rs  parallel.rs  pci.rs  solver.rs
src/gpu/: ash_backend.rs  mod.rs
src/utils/: allocator.rs  logging.rs  math.rs  mod.rs  profiling.rs  simd.rs  spatial.rs
src/world/: collision_manager.rs  dynamics_manager.rs  mod.rs
tests/: articulation_tests.rs  ccd_tests.rs  collision_tests.rs  integration_tests.rs  joint_tests.rs  mesh_tests.rs  raycast_tests.rs  speculative_test.rs  threading_tests.rs
(+34 files in other folders)
