[package]
name = "particle_accelerator"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Particle Accelerator – a modular, ECS-ready physics engine for Rust."
repository = "https://example.com/particle_accelerator"
authors = ["Saptak Santra"]

[dependencies]
glam = { version = "0.25", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
parking_lot = "0.12"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[lib]
name = "particle_accelerator"
path = "src/lib.rs"

[[bench]]
name = "physics_bench"
harness = false

[[example]]
name = "basic_simulation"

[[example]]
name = "stacking"

[[example]]
name = "ray_casting"
