[package]
name = "particle_accelerator"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Particle Accelerator – a modular, ECS-ready physics engine for Rust."
repository = "https://github.com/saptak7777/Particle_Accelerator"
authors = ["Saptak Santra"]

[dependencies]
glam = { version = "0.30.9", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
parking_lot = "0.12.5"
rayon = { version = "1.11.0", optional = true }
ash_renderer = "0.4.7"
ash = "0.38.0"
vk-mem = "0.5.0"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = "0.8.1"
approx = "0.5.1"

[lib]
name = "particle_accelerator"
path = "src/lib.rs"

[[bench]]
name = "physics_bench"
harness = false

[[example]]
name = "basic_simulation"

[[example]]
name = "stacking"

[[example]]
name = "ray_casting"
